<resources>
    <string name="app_name">Jara</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="connection_header">Connection</string>
    <string name="notifications_header">Notifications</string>

    <string name="errorNotificationChannelName">Errors</string>
    <string name="errorNotificationChannelDesc">Alerts for offline, crashes, exceptions, etc.</string>
    <string name="settingsHeader">Settings</string>
    <string name="ipaddressHeader">IP Address</string>
    <string name="portHeader">Port</string>
    <string name="notificationsHeader">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
</resources>
